--- a/styles/less/global/elements.less
+++ b/styles/less/global/elements.less
@@ -802,6 +802,7 @@
 
         .preview-image-container {
             width: 100%;
+            min-height: 0;
             flex-grow: 1;
             object-fit: cover;
             border-radius: 4px 4px 0 0;
