--- a/styles/less/dialog/character-creation/selections-container.less
+++ b/styles/less/dialog/character-creation/selections-container.less
@@ -114,9 +114,6 @@
 
             .card-preview-container {
                 flex: 1;
-            }
-
-            .card-preview-container {
                 border-color: light-dark(@dark-blue, @golden);
             }
 
